# dmx

./: .gitignore  LICENSE  NEXT.md  README.md  changes.md  index.html  license.txt  logo.txt  params.json
cpp-core/: basic.cpp  dbl-stdlib.hpp  test  test-datastructures  test-datastructures.cpp  test-intrusive-pointer  test-intrusive-pointer.cpp  test-objects.cpp  test.cpp
dbl-core/benchmarks-online-package/: run.py
dbl-core/benchmarks-online-package/benchmark1-context-switch/odemx3/source/: CMakeLists.txt  main.cpp
dbl-core/benchmarks-online-package/results/: cxt_cm_coro_copy.txt  cxt_cm_coro_share.txt  cxt_cm_dblc_f.txt  cxt_cm_dblc_g.txt  cxt_cm_slx.txt  cxt_cs_coro_copy.txt  cxt_cs_coro_share.txt  cxt_cs_dblc_f.txt  cxt_cs_dblc_g.txt  cxt_cs_dblc_s.txt  cxt_cs_jist.txt  cxt_cs_odemx.txt  cxt_cs_slx.txt  cxt_fn_cpp.txt  cxt_fn_dblc_g.txt  cxt_fn_slx.txt
dbl-core/switch-case/: cs  cs.cpp
dev-plugins/.metadata/: version.ini
dev-plugins/BF/: .project  plugin.properties  plugin.xml
dev-plugins/BF.edit/: .project  plugin.properties  plugin.xml
dev-plugins/BF.editor/: .project  plugin.properties  plugin.xml
dev-plugins/BF/resources/: bf.ecorediag  bf.genmodel  test.bf  test1.bf  test2.bf
dev-plugins/DESMO-J/: .classpath  .project
dev-plugins/DESMO-J-Sample/: .project  SampleModel Experiment_debug.html  SampleModel Experiment_error.html  SampleModel Experiment_report.html  SampleModel Experiment_trace.html
dev-plugins/JavaStatePatternExample/: .project
dev-plugins/JavaStatePatternExample/src/: Example.java  State.java  StateMachine.java
dev-plugins/JiST-Pro/: .project  build.properties
dev-plugins/JiST-SWANS-Pro/: .classpath  .project
dev-plugins/JiST-SWANS-Pro/scripts/: .jist.bat.swp
dev-plugins/dbx-emf-edit/: .project  plugin.xml
dev-plugins/dbx-emf-model/: .classpath  .project  plugin.properties  plugin.xml
dev-plugins/dbx-ide/: .project  plugin.xml
dev-plugins/hub.sam.dbl.model/: .classpath  .project  build.properties  plugin.properties  plugin.xml
dev-plugins/hub.sam.dbl.model.edit/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.dbl.model.editor/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.dbl.model/text/: description.txt
dev-plugins/hub.sam.dmx/: .classpath  .project  DefaultSimulation Experiment_debug.html  DefaultSimulation Experiment_error.html  DefaultSimulation Experiment_report.html  DefaultSimulation Experiment_trace.html  build.acceleo  build.gradle  build.properties  plugin.xml  settings.gradle  testpage.jpage
dev-plugins/hub.sam.dmx.modifications/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.dmx.modifications.edit/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.sdl.model/: .project
dev-plugins/hub.sam.sdl.model.edit/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.tef/: .project
dev-plugins/hub.sam.tef.ecore/: .project
dev-plugins/hub.sam.tef.emf.tsledit/: .project
dev-plugins/hub.sam.tef.expressions/: .project  plugin.xml
dev-plugins/hub.sam.tef.expressions.emf/: .project  plugin.xml
dev-plugins/hub.sam.tef.expressions.emf.edit/: .project  plugin.properties  plugin.xml
dev-plugins/hub.sam.tef.feature/: .project
dev-plugins/hub.sam.tef.gmf/: .project
dev-plugins/hub.sam.tef.ocl/: .project
dev-plugins/hub.sam.tef.rcc/: .project
dev-plugins/hub.sam.tef.sdl/: .project
dev-plugins/hub.sam.tef.tsleditor/: .project
dev-plugins/hub.sam.tef.ui/: .project
dev-plugins/hub.sam.tef.updatesite/: .project  artifacts.xml  content.xml  site.xml
docs/: DBL metamodel base.graffle  DBL metamodel extensions.graffle  Debugging.graffle  modifications metamodel.graffle
docs/DMX.graffle/: data.plist
docs/notes on named extensions.graffle/: data.plist
docs/recursive extension instance processing.graffle/: data.plist
runtime-plugins/Examples/: .classpath  .project
semaphores/: cpp-semaphores  cpp-semaphores.cpp
(+2759 files in other folders)
